--- a/sinhala.html
+++ b/sinhala.html
@@ -109,7 +109,7 @@
 
     <!-- Navigation -->
     <div class="navbar">
-        <span class="back-btn" onclick="location.href='funq.vercel.app'">←</span>
+        <span class="back-btn" onclick="location.href='https://funq.vercel.app'">←</span>
         <span class="nav-title">FunQ - සිංහල</span>
     </div>
 
