--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
    <img src="https://c.tenor.com/VYzeMgXGU-gAAAAC/tenor.gif" alt="Welcome GIF" class="welcome-gif"> 
    <h1 class="title">Welcome to FunQ 🥰</h1> 
    <p class="subtitle">Select your language:</p> 
-   <div class="language-buttons"> <button class="btn sinhala" onclick="location.href='sinhala.html'">සිංහල</button> <button class="btn english" onclick="alert('English interface coming soon!')">English</button> 
+   <div class="language-buttons"> 
+     <button class="btn sinhala" onclick="location.href='sinhala.html'">සිංහල</button> 
+     <button class="btn english" onclick="location.href='english.html')">English</button> 
    </div> 
   </div> 
  </body>
