--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
    <p class="subtitle">Select your language:</p> 
    <div class="language-buttons"> 
      <button class="btn sinhala" onclick="location.href='sinhala.html'">සිංහල</button> 
-     <button class="btn english" onclick="location.href='english.html')">English</button> 
+     <button class="btn english" onclick="location.href='english.html'">English</button> 
    </div> 
   </div> 
  </body>
