--- a/english.html
+++ b/english.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Welcome to FunQ</title> 
-  <style>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FunQ - English</title>
+
+    <style>
         /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
 
@@ -14,38 +16,46 @@
             padding: 0;
             box-sizing: border-box;
             font-family: 'Fredoka', sans-serif;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(135deg, #fbc2eb, #a18cd1);
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
-            overflow: hidden;
-            user-select: none;
-            animation: backgroundAnimation 6s infinite alternate;
+            min-height: 100vh;
+            overflow-y: auto;
         }
 
-        /* Background Animation */
-        @keyframes backgroundAnimation {
-            0% {
-                background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-            }
-
-            100% {
-                background: linear-gradient(135deg, #a18cd1, #fbc2eb);
-            }
+        /* Navbar */
+        .navbar {
+            width: 100%;
+            padding: 10px 20px;
+            background: #6a11cb;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
 
-        /* Container */
-        .container {
+        .back-btn {
+            font-size: 2rem;
+            cursor: pointer;
+        }
+
+        .nav-title {
+            font-size: 1.8rem;
+            flex: 1;
             text-align: center;
-            animation: fadeIn 2s ease-in-out;
         }
 
-        /* Welcome GIF */
-        .welcome-gif {
-            width: 250px;
+        /* Grade GIF */
+        .grade-gif {
+            width: 300px;
             border-radius: 20px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            margin: 40px 0;
             animation: bounce 2s infinite ease-in-out;
         }
 
@@ -60,73 +70,64 @@
             }
         }
 
-        /* Title */
-        .title {
-            font-size: 3rem;
-            color: #fff;
-            margin: 20px 0;
-            text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Subtitle */
-        .subtitle {
-            font-size: 1.5rem;
-            color: #fff;
+        /* Grade Title */
+        .grade-title {
+            font-size: 2rem;
+            color: white;
+            text-align: center;
             margin-bottom: 30px;
         }
 
-        /* Language Buttons */
-        .language-buttons {
+        /* Grade Buttons */
+        .grade-buttons {
             display: flex;
-            gap: 20px;
+            flex-wrap: wrap;
             justify-content: center;
+            gap: 15px;
         }
 
-        .btn {
-            padding: 15px 30px;
-            font-size: 1.2rem;
+        .grade-btn {
+            padding: 15px 25px;
+            font-size: 1.5rem;
             border: none;
-            border-radius: 30px;
-            cursor: none;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 20px;
+            background: linear-gradient(45deg, #43cea2, #185a9d);
+            color: white;
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
-        .btn:hover {
+        .grade-btn:hover {
             transform: scale(1.1);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
+    </style>
 
-        .sinhala {
-            background: linear-gradient(45deg, #ff4e50, #f9d423);
-            color: white;
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <div class="navbar">
+        <span class="back-btn" onclick="location.href='https://funq.vercel.app'">←</span>
+        <span class="nav-title">FunQ - English</span>
+    </div>
+
+    <img src="https://res.cloudinary.com/diuuelnkm/image/upload/v1739905972/ezgif-1bbd1e17c0fdf4_lhfzew.gif"
+        alt="Grade GIF" class="grade-gif">
+
+    <p class="grade-title">Choose Your Grade:</p>
+
+    <div class="grade-buttons" id="gradeButtons"></div>
+
+    <script>
+        // Generate Grade Buttons (1 to 13)
+        const gradeContainer = document.getElementById('gradeButtons');
+        for (let i = 1; i <= 13; i++) {
+            gradeContainer.innerHTML += `<button class="grade-btn" onclick="alert('Grade ${i}')">Grade ${i}</button>`;
         }
+    </script>
 
-        .english {
-            background: linear-gradient(45deg, #4e54c8, #8f94fb);
-            color: white;
-        }
+</body>
 
-        /* Fade-in Animation */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-    </style> 
- </head> 
- <body> <!-- Main Container --> 
-  <div class="container"> 
-   <img src="https://c.tenor.com/VYzeMgXGU-gAAAAC/tenor.gif" alt="Welcome GIF" class="welcome-gif"> 
-   <h1 class="title">Welcome to FunQ 🥰</h1> 
-   <p class="subtitle">Select your language:</p> 
-   <div class="language-buttons"> 
-     <button class="btn sinhala" onclick="location.href='sinhala.html'">සිංහල</button> 
-     <button class="btn english" onclick="location.href='english.html'">English</button> 
-   </div> 
-  </div> 
- </body>
 </html>
