--- a/sinhala.html
+++ b/sinhala.html
@@ -120,7 +120,7 @@
         <span class="nav-title">FunQ - සිංහල</span>
     </div>
 
-    <img src="https://res.cloudinary.com/diuuelnkm/image/upload/v1739905972/ezgif-1bbd1e17c0fdf4_lhfzew.gif"
+    <img src="https://funq.vercel.app/funq-logo.svg"
         alt="Grade GIF" class="grade-gif">
 
     <p class="grade-title">ඔබේ ශ්‍රේණිය තෝරන්න:</p>
