--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
    <h1 class="title">Welcome to FunQ 🥰</h1> 
    <p class="subtitle">Select your language:</p> 
    <div class="language-buttons"> 
-     <button class="btn sinhala" onclick="location.href='sinhala.html'">සිංහල</button> 
-     <button class="btn english" onclick="location.href='english.html'">English</button> 
+     <button class="btn sinhala" onclick="location.href='lang/si/choose-grade'">සිංහල</button> 
+     <button class="btn english" onclick="location.href='lang/en/choose-grade'">English</button> 
    </div> 
   </div> 
  </body>
